fix(docs): `post-closebutton` alignment in icon detail panel

--- a/packages/documentation/src/stories/foundations/icons/search/search-icons.styles.scss
+++ b/packages/documentation/src/stories/foundations/icons/search/search-icons.styles.scss
@@ -128,4 +128,9 @@ tokens.$default-map: utilities.$post-spacing;
       font-weight: 700;
     }
   }
+
+  post-closebutton {
+    inset-block-start: 2rem;
+    inset-inline-end: 2rem;
+  }
 }
